# data-platform-libs

./: .gitignore  CONTRIBUTING.md  README.md  SECURITY.md  charmcraft.yaml  concierge.yaml  metadata.yaml  pyproject.toml  requirements-v1.txt  requirements.txt  tox.ini
.github/: .jira_sync_config.yaml
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: ci.yaml  release.yaml  sync_issue_to_jira.yaml  test_release.yaml
requirements/v0/: requirements.txt
requirements/v1/: requirements.txt
src/: charm.py
tests/: conftest.py  jubilant_helpers.py  test_etcd_charm.py
tests/integration/: conftest.py  helpers.py  test_architecture.py  test_azure_storage_charm.py  test_charm.py  test_kafka_charm.py  test_opensearch_charm.py  test_rolling_upgrade.py  test_rolling_upgrade_from_specific_version.py  test_s3_charm.py  test_spark_service_account.py
tests/unit/: test_architecture.py  test_azure_storage.py  test_cached_secrets.py  test_charm.py  test_data_models.py  (+7 more)
tests/v0/integration/application-charm-etcd-client/: actions.yaml  charmcraft.yaml  metadata.yaml  pyproject.toml  requirements.txt
tests/v0/integration/application-charm-etcd-client/src/: charm.py  etcd_requires.py  literals.py  workload.py
tests/v1/integration/application-charm/: actions.yaml  charmcraft.yaml  metadata.yaml  pyproject.toml
tests/v1/integration/application-charm/lib/charms/operator_libs_linux/v2/: snap.py
tests/v1/integration/application-charm/lib/charms/tls_certificates_interface/v4/: tls_certificates.py
tests/v1/integration/application-charm/src/: charm.py  etcd_requires.py
(+182 files in other folders)
