[project]
name = "requirer-charm-for-etcd"
version = "0.1.0"
description = "Requirer charm for testing client relations with etcd"
readme = "README.md"
dependencies = [
    "ops>=3.3.1",
    "pydantic>=2.12.3",
    "tenacity>=9.1.2",
    "charmlibs-interfaces-tls-certificates>=1.0",
    "charmlibs-snap>=1.0"
]