[tool.poetry]
package-mode = false
requires-poetry = ">=2.0.0"

[tool.poetry.dependencies]
python = "^3.10.12"
ops = ">=2.0.0,<3.0.0"
pydantic = ">=2.11"
psycopg2 = "^2.9.10"
charmlibs-snap = ">=1.0.1"
charmlibs-interfaces-tls-certificates = ">=1.1.0"
tenacity = "==9.1.2"

[tool.poetry.group.charm-libs.dependencies]
ops = ">=2.0.0"
pydantic = ">=2.11"
psycopg2 = "^2.9.10"
#cryptography = "==44.0.2"
#cosl = ">= 0.0.50"

[tool.poetry.requires-plugins]
poetry-plugin-export = ">=1.8"

[build-system]
build-backend = "poetry.core.masonry.api"
